@@ -1,8 +1,3 @@
-- vipsthumbnail could have a --zoom option, does a crop to ensure output is
-  always exactly the specified --size
-
-  or --expand?
-
 - vipsprofile needs a man page for Debian, I guess
 
 - new_heart.ws fails with libvips master
