@@ -29,6 +29,7 @@
 - added vips::init() and vips::shutdown() to C++ API
 - reuse pixel buffers on sharing to reduce mem cycling
 - conv is SMALLTILE, huge mem use saving on wide images
+- vipsthumbnail has a --crop option
 
 20/11/13	started 7.36.5
 - better cache sizing in unbuffered sequential mode
